Fix code block text wrapping. Add via param to tweets.

--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -1,5 +1,6 @@
 pre.sourceCode {
     overflow-x: auto;
+    word-wrap: normal;
 }
 
 /* Generated by pandoc */
@@ -25,6 +26,7 @@ code > span.er { color: #c3bf9f; }
 p > code {
     background-color: wheat;
     color: brown;
+    white-space: pre;
 }
 
 .resume {
